OpenAPIスキーマを更新
